--- a/css/master.css
+++ b/css/master.css
@@ -9,10 +9,19 @@
     background-color: #eee;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: auto auto auto;
+    grid-template-rows: 50px auto 50px;
     grid-template-areas: "logo logo logo  nav nav nav nav nav nav nav"
-        "cont cont cont cont cont cont cont  said said said "
+        "cont cont cont cont cont cont cont  cont said said "
         "fot fot fot fot  fot fot fot fot fot fot ";
+}
+
+ul {
+    list-style: none;
+
+}
+
+ul li {
+    display: inline-block;
 }
 
 h2 {
